Fixed more issues with gap

--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@
      display: grid;
      grid-template-columns: 0.75fr 4fr repeat(3, 1fr);
      padding: 20px 30px 10px 0;
-     
+     column-gap: 5px;
      height: auto;
      
      
@@ -121,7 +121,7 @@
     height: var(--bottom-avatar-radius);
     object-fit: cover;
     justify-self: end;
-    margin-right: 20px;
+    margin-right: 15px;
 }
 
 .header-btn {
